--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
-language: python
-python:
-  - "2.7"
 before_install:
   - git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
   - export PATH=`pwd`/depot_tools:"$PATH"
 install: gclient
+before_script: ls -la
 script: presubmit.py
