--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
+sudo: required
 before_install:
   - git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
   - export PATH=`pwd`/depot_tools:"$PATH"
 install: gclient
 before_script: ls -la
-script: PRESUBMIT.py
+script: sudo PRESUBMIT.py
