Added the frontend compilation.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ before_install:
   - git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git --depth=1
   - export PATH=`pwd`/depot_tools:"$PATH"
 script:
+ - python -u ./devtools/scripts/compile_frontend.py
  - python -u ./depot_tools/presubmit_support.py --commit --verbose --verbose --skip_canned CheckRietveldTryJobExecution --skip_canned CheckTreeIsOpen --skip_canned CheckBuildbotPendingBuilds --skip_canned CheckOwners --upstream HEAD~
