--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ before_install:
   - export PATH=`pwd`/depot_tools:"$PATH"
 script:
  - python -u ./generate_compile_commands.py
+ - chmod 777 ./compile_frontend_separetely.sh
  - ./compile_frontend_separetely.sh
  - python -u ./depot_tools/presubmit_support.py --commit --verbose --verbose --skip_canned CheckRietveldTryJobExecution --skip_canned CheckTreeIsOpen --skip_canned CheckBuildbotPendingBuilds --skip_canned CheckOwners --upstream HEAD~
